--- a/relogios.html
+++ b/relogios.html
@@ -36,10 +36,10 @@
     </div>
     <div class="relogio container">
       <div class="relogios-img">
-        <img src="./assets/relogios/spiga.png">
+        <img src="./assets/relogios/tubogas.png">
       </div>
       <div class="relogio-conteudo">
-        <h2 class="font-1-xl c11">Serpenti Spiga - R$ 500.000</h2>
+        <h2 class="font-1-xl c11">Serpenti Tubogas - R$ 550.000</h2>
         <p class="font-2-s c8">Relógio Serpenti Tubogas de duas voltas em ouro rosa 18K cravejado com diamantes e mostrador completamente cravejado com pavê de diamantes. Resistente à água até 30 metros</p>
         <ul class="font-1-m c8">
           <li>
@@ -63,36 +63,35 @@
       </div>
     </div>
 
-    <div class="relogio-bg">
-      <div class="relogio container">
-        <div class="relogios-img">
-          <img src="./assets/relogios/spiga.png">
-        </div>
-        <div class="relogio-conteudo">
-          <h2 class="font-1-xl w">Serpenti Spiga - R$ 500.000</h2>
-          <p class="font-2-s c5">Relógio Serpenti Tubogas de duas voltas em ouro rosa 18K cravejado com diamantes e mostrador completamente cravejado com pavê de diamantes. Resistente à água até 30 metros</p>
-          <ul class="font-1-m c5">
-            <li>
-              <img src="./icons/relogio.svg">
-              <span>Material: Ouro rosa</span>
-            </li>
-            <li>
-              <img src="./icons/diamond.svg">
-              <span>Pedra: Diamantes</span>
-            </li>
-            <li>
-              <img src="./icons/agua.svg">
-              <span>Resistente a água</span>
-            </li>
-            <li>
-              <img src="./icons/made.svg">
-              <span>Feito na Suiça</span>
-            </li>
-          </ul>
-          <a href="./relogios/serpenti-shine.html" class="botao">MAIS SOBRE</a>
-        </div>
+    <div class="relogio container">
+      <div class="relogios-img">
+        <img src="./assets/relogios/shine.png">
+      </div>
+      <div class="relogio-conteudo">
+        <h2 class="font-1-xl c11">Serpenti Shine - R$ 100.000</h2>
+        <p class="font-2-s c8">Relógio Serpenti Tubogas de duas voltas com caixa e pulseira em aço inoxidável, bezel cravejado com diamantes lapidação brilhante e mostrador de opalina prateada. Resistente à água até 30 metros.</p>
+        <ul class="font-1-m c8">
+          <li>
+            <img src="./icons/relogio.svg">
+            <span>Material: Aço</span>
+          </li>
+          <li>
+            <img src="./icons/diamond.svg">
+            <span>Pedra: Diamantes</span>
+          </li>
+          <li>
+            <img src="./icons/agua.svg">
+            <span>Resistente a água</span>
+          </li>
+          <li>
+            <img src="./icons/made.svg">
+            <span>Feito na Suiça</span>
+          </li>
+        </ul>
+        <a href="./relogios/serpenti-shine.html" class="botao">MAIS SOBRE</a>
       </div>
     </div>
+
 
     <div class="relogio container">
       <div class="relogios-img">
@@ -100,7 +99,36 @@
       </div>
       <div class="relogio-conteudo">
         <h2 class="font-1-xl c11">Serpenti Spiga - R$ 500.000</h2>
-        <p class="font-2-s c8">Relógio Serpenti Tubogas de duas voltas em ouro rosa 18K cravejado com diamantes e mostrador completamente cravejado com pavê de diamantes. Resistente à água até 30 metros</p>
+        <p class="font-2-s c8">Relógio Serpenti Spiga de duas voltas com caixa em ouro rosa 18K cravejada com diamantes, mostrador em malaquita e pulseira em ouro rosa 18K parcialmente cravejada com diamantes lapidação brilhante. Resistente à água até 30 metros.</p>
+        <ul class="font-1-m c8">
+          <li>
+            <img src="./icons/relogio.svg">
+            <span>Material: Ouro rosa</span>
+          </li>
+          <li>
+            <img src="./icons/diamond.svg">
+            <span>Pedra: Diamantes, Malaquita</span>
+          </li>
+          <li>
+            <img src="./icons/agua.svg">
+            <span>Resistente a água</span>
+          </li>
+          <li>
+            <img src="./icons/made.svg">
+            <span>Feito na Suiça</span>
+          </li>
+        </ul>
+        <a href="./relogios/serpenti-spiga.html" class="botao">MAIS SOBRE</a>
+      </div>
+    </div>
+
+    <div class="relogio container">
+      <div class="relogios-img">
+        <img src="./assets/relogios/diamond.png">
+      </div>
+      <div class="relogio-conteudo">
+        <h2 class="font-1-xl c11">Serpenti Diamond - R$ 700.000</h2>
+        <p class="font-2-s c8">Relógio de Alta Joalheria Serpenti Diamond com caixa em ouro rosa 18K, mostrador cravejado com pavê de diamantes e pulseira de duas voltas, ambas cravejadas com diamantes. Resistente à água até 30 metros</p>
         <ul class="font-1-m c8">
           <li>
             <img src="./icons/relogio.svg">
@@ -119,53 +147,23 @@
             <span>Feito na Suiça</span>
           </li>
         </ul>
-        <a href="./relogios/serpenti-spiga.html" class="botao">MAIS SOBRE</a>
+        <a href="./relogios/serpenti-diamond.html" class="botao">MAIS SOBRE</a>
       </div>
     </div>
 
-    <div class="relogio-bg">
-      <div class="relogio container">
-        <div class="relogios-img">
-          <img src="./assets/relogios/spiga.png">
-        </div>
-        <div class="relogio-conteudo">
-          <h2 class="font-1-xl w">Serpenti Spiga - R$ 500.000</h2>
-          <p class="font-2-s c5">Relógio Serpenti Tubogas de duas voltas em ouro rosa 18K cravejado com diamantes e mostrador completamente cravejado com pavê de diamantes. Resistente à água até 30 metros</p>
-          <ul class="font-1-m c5">
-            <li>
-              <img src="./icons/relogio.svg">
-              <span>Material: Ouro rosa</span>
-            </li>
-            <li>
-              <img src="./icons/diamond.svg">
-              <span>Pedra: Diamantes</span>
-            </li>
-            <li>
-              <img src="./icons/agua.svg">
-              <span>Resistente a água</span>
-            </li>
-            <li>
-              <img src="./icons/made.svg">
-              <span>Feito na Suiça</span>
-            </li>
-          </ul>
-          <a href="./relogios/serpenti-diamond.html" class="botao">MAIS SOBRE</a>
-        </div>
-      </div>
-    </div>
 
     <div class="relogio container">
       <div class="relogios-img">
-        <img src="./assets/relogios/spiga.png">
+        <img src="./assets/relogios/classic.png">
       </div>
       <div class="relogio-conteudo">
-        <h2 class="font-1-xl c11">Serpenti Spiga - R$ 500.000</h2>
-        <p class="font-2-s c8">Relógio Serpenti Tubogas de duas voltas em ouro rosa 18K cravejado com diamantes e mostrador completamente cravejado com pavê de diamantes. Resistente à água até 30 metros</p>
+        <h2 class="font-1-xl c11">Serpenti Classic - R$ 400.000</h2>
+        <p class="font-2-s c8">Relógio Serpenti Tubogas de duas voltas com caixa e pulseira em ouro amarelo 18K, bezel cravejado com diamantes lapidação brilhante e mostrador de opalina prateada. Resistência à água:30m.</p>
 
         <ul class="font-1-m c8">
           <li>
             <img src="./icons/relogio.svg">
-            <span>Material: Ouro rosa</span>
+            <span>Material: Ouro amarelo</span>
           </li>
           <li>
             <img src="./icons/diamond.svg">
