--- a/seguros.html
+++ b/seguros.html
@@ -61,53 +61,85 @@
         </div>
       </div>
     </article>
-
-    <div class="vantagens-bg">
-      <h2 class="font-1-xxl w container">Vantagens<span class="p1">.</span></h2>
-      <div class="vantagens container">
-
-
-        <ul class="w">
-          <li>
-            <img src="/icons/protect.svg">
-            <h3 class="font-1-l">Proteção Contra Perda</h3>
-            <p class="font-2-s">Oferecemos cobertura completa contra perda acidental, garantindo reembolso ou compensação pelo valor integral da sua joia, para sua tranquilidade.</p>
-          </li>
-
-          <li>
-            <img src="/icons/globe.svg">
-            <h3 class="font-1-l">Cobertura Global</h3>
-            <p class="font-2-s">Sua joia estará protegida onde quer que você vá, garantindo que, ao viajar, seu item estará seguro em qualquer parte do mundo, sem preocupações.</p>
-          </li>
-
-          <li>
-            <img src="/icons/protect.svg">
-            <h3 class="font-1-l">Atendimento Exclusivo</h3>
-            <p class="font-2-s">Você terá acesso direto a uma equipe de especialistas em joias, disponível para oferecer suporte dedicado e resolver quaisquer questões rapidamente.</p>
-          </li>
-
-          <li>
-            <img src="/icons/protect.svg">
-            <h3 class="font-1-l">Suporte 08h às 18h</h3>
-            <p class="font-2-s">Nosso suporte ao cliente está disponível todos os dias, das 08h às 18h, para garantir assistência completa em caso de dúvidas ou quaisquer sinistros.</p>
-          </li>
-
-          <li>
-            <img src="/icons/protect.svg">
-            <h3 class="font-1-l">Acesso a Desconto</h3>
-            <p class="font-2-s">Clientes recebem descontos exclusivos em estabelecimentos parceiros, como lojas renomadas, para compras de novas peças ou serviços de manutenção.</p>
-          </li>
-
-          <li>
-            <img src="/icons/protect.svg">
-            <h3 class="font-1-l">Reparos ou Reposição</h3>
-            <p class="font-2-s">Se sua joia sofrer danos, nós providenciamos reparo ou substituição rápida, garantindo que você possa continuar usando seu bem precioso sem atrasos.</p>
-          </li>
-        </ul>
-
-      </div>
-    </div>
   </main>
+
+  <div class="vantagens-bg" aria-label="vantagens-seguro">
+    <h2 class="font-1-xxl w container">Vantagens<span class="p1">.</span></h2>
+    <div class="vantagens container">
+
+      <ul class="w">
+        <li>
+          <img src="/icons/protect.svg">
+          <h3 class="font-1-l">Proteção Contra Perda</h3>
+          <p class="font-2-s">Oferecemos cobertura completa contra perda acidental, garantindo reembolso ou compensação pelo valor integral da sua joia, para sua tranquilidade.</p>
+        </li>
+
+        <li>
+          <img src="/icons/globe.svg">
+          <h3 class="font-1-l">Cobertura Global</h3>
+          <p class="font-2-s">Sua joia estará protegida onde quer que você vá, garantindo que, ao viajar, seu item estará seguro em qualquer parte do mundo, sem preocupações.</p>
+        </li>
+
+        <li>
+          <img src="/icons/star.svg">
+          <h3 class="font-1-l">Atendimento Exclusivo</h3>
+          <p class="font-2-s">Você terá acesso direto a uma equipe de especialistas em joias, disponível para oferecer suporte dedicado e resolver quaisquer questões rapidamente.</p>
+        </li>
+
+        <li>
+          <img src="/icons/headset.svg">
+          <h3 class="font-1-l">Suporte 08h às 18h</h3>
+          <p class="font-2-s">Nosso suporte ao cliente está disponível todos os dias, das 08h às 18h, para garantir assistência completa em caso de dúvidas ou quaisquer sinistros.</p>
+        </li>
+
+        <li>
+          <img src="/icons/sell.svg">
+          <h3 class="font-1-l">Acesso a Desconto</h3>
+          <p class="font-2-s">Clientes recebem descontos exclusivos em estabelecimentos parceiros, como lojas renomadas, para compras de novas peças ou serviços de manutenção.</p>
+        </li>
+
+        <li>
+          <img src="/icons/fix.svg">
+          <h3 class="font-1-l">Reparos ou Reposição</h3>
+          <p class="font-2-s">Se sua joia sofrer danos, nós providenciamos reparo ou substituição rápida, garantindo que você possa continuar usando seu bem precioso sem atrasos.</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <article class="perguntas container">
+    <h2 class="font-1-xxl">Perguntas frequentes<span class="p1">.</span></h2>
+
+    <dl>
+      <div>
+        <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+        <dd class="font-2-s c9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Como posso entrar em contato?</dt>
+        <dd class="font-2-s c9">Você pode entrar em contato conosco através do nosso site, onde encontrará um formulário de contato. Também estamos disponíveis por e-mail e redes sociais para responder suas dúvidas.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
+        <dd class="font-2-s c9">Sim, oferecemos promoções sazonais e descontos especiais. Fique atento às nossas redes sociais e ao nosso site para mais informações sobre as ofertas atuai</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
+        <dd class="font-2-s c9">Oferecemos garantia contra defeitos de fabricação em todas as nossas joias. Caso encontre algum problema, entre em contato conosco para obter informações sobre o processo de troca ou reparo.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
+        <dd class="font-2-s c9">Não aceitamos parcelamento no boleto. O pagamento pode ser feito à vista via boleto ou parcelado através dos cartões de crédito.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b"> Vocês fazem personalização de joias?</dt>
+        <dd class="font-2-s c9">Sim, oferecemos serviços de personalização para algumas das nossas joias. Você pode escolher gravar nomes, datas especiais ou escolher pedras específicas. Entre em contato conosco para mais informações sobre as opções disponíveis e prazos.</dd>
+      </div>
+    </dl>
+
+  </article>
+
+
 
 
   <footer class="footer-bg">
