--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       </div>
 
       <div class="footer-informacoes">
-        <h3 class="font-2-l w">INFORMAÇÕES</h3>
+        <h3 class="font-2-l w">INFORMAÇÕES</h3>z
         <nav>
           <ul class="font-2-m c5">
             <li><a href="relogios.html">Relógios</a></li>
