--- a/relogios/serpenti-classic.html
+++ b/relogios/serpenti-classic.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e condições">
+  <meta name="description" content="Bvlgari | Serpenti Classic">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../style.css">
-  <title>Termos e condições | BVLGARI</title>
+  <title>Serpenti Classic | Bvlgari</title>
 </head>
 
 <body id="termos">
@@ -18,24 +18,120 @@
       <a href="../"><img src="../assets/BVLGARI.svg" alt=""></a>
       <nav aria-label="primaria">
         <ul class="header-menu">
-          <li><a class="w font-1-m" href="./relogios.html">Relógios</a></li>
-          <li><a class="w font-1-m" href="./seguros.html">Seguros</a></li>
-          <li><a class="w font-1-m" href="./contato.html">Contato</a></li>
+          <li><a class="w font-1-m" href="../relogios.html">Relógios</a></li>
+          <li><a class="w font-1-m" href="../seguros.html">Seguros</a></li>
+          <li><a class="w font-1-m" href="../contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
   </header>
-  <main>
-    <div class="titulo-bg">
-      <div class="titulo container">
-        <p class="font-2-xl c5">R$ 550.000</p>
-        <h1 class="font-1-xxl w">Serpenti Classic<span class="p1">.</span></h1>
-      </div>
+  <main class="titulo-bg">
+    <div class="titulo container">
+      <p class="up font-1-xl c5">R$ 400.000</p>
+      <h1 class="font-1-xxl w">Serpenti Classic<span class="p1">.</span></h1>
     </div>
+    <div class="relogios container">
+      <div class="relogio-imagens">
+        <img class="img1" src="/assets/relogios/classic.png">
+        <img class="img2" src="/assets/relogios/diamond.png">
+        <img class="img3" src="/assets/relogios/shine.png">
+        <img class="img4" src="/assets/relogios/spiga.png">
+        <img class="img5" src="/assets/relogios/tubogas.png">
+      </div>
+      <div class="relogio-conteudo-about">
+        <p class="font-2-l c5">O relógio Serpenti Classic combina a sinuosidade da serpente com o design tubular moderno, refletindo curvas femininas e fluidez. Feito em ouro amarelo 18K, ele possui diamantes, rubelita na coroa e um mostrador guilhochê. A pulseira em espiral confere flexibilidade e estilo único, destacando o glamour e a sofisticação da peça.</p>
 
+        <div class="relogio-comprar">
+          <a class="botao" href="../orçamento.html">COMPRAR AGORA</a>
+          <span class="c3 font-1-xs">Entrega rápida</span>
+          <span class="c3 font-1-xs">Disponível personalização</span>
+        </div>
+
+        <h2 class="font-1-xs w">INFORMAÇÕES</h2>
+        <ul class="relogio-informacoes">
+          <li>
+            <img src="/icons/relogio.svg">
+            <h3 class="font-1-m w">Material</h3>
+            <p class="font-2-s c5">Feito com ouro amarelo 18k</p>
+          </li>
+          <li>
+            <img src="/icons/diamond.svg">
+            <h3 class="font-1-m w">Pedra Preciosa</h3>
+            <p class="font-2-s c5">Bezel cravejado com diamantes lapidação brilhante</p>
+          </li>
+          <li>
+            <img src="/icons/agua.svg">
+            <h3 class="font-1-m w">Resistente a água</h3>
+            <p class="font-2-s c5">Resistente a água até 30 metros</p>
+          </li>
+          <li>
+            <img src="/icons/made.svg">
+            <h3 class="font-1-m w">Importado de qualidade</h3>
+            <p class="font-2-s c5">Feito na Suiça</p>
+          </li>
+        </ul>
+
+        <h2 class="font-1-xs w">Ficha técnica</h2>
+        <ul class="relogio-ficha font-2-s w">
+          <li>Diâmetro (mm): <span>35</span></li>
+          <li>Tipologia de movimento: <span>Quartzo</span></li>
+          <li>Tamanho: <span>S - 135mm</span></li>
+          <li>Formato da caixa:<span>Gota</span></li>
+          <li>Funções:<span>Hora-Minuto</span></li>
+        </ul>
+      </div>
+
+    </div>
   </main>
 
-  <footer class="footer-bg">
+  <article class="relogios-lista">
+    <h2 class="font-1-xxl container">Escolha o seu<span class="p1">.</span></h2>
+
+    <ul class="container">
+      <li>
+        <a href="../relogios/serpenti-tubogas.html">
+          <img src="/assets/serpenti-tubogas.png" alt="">
+          <h3 class="font-1-xl c11">Tubogas</h3>
+          <span class="font-2-m c8">R$ 550.000</span>
+        </a>
+      </li>
+      <li>
+        <a href="../relogios/serpenti-shine.html">
+          <img src="/assets/serpenti-shine.png" alt="relogio-shine">
+          <h3 class="font-1-xl c11">Shine</h3>
+          <span class="font-2-m c8">R$ 100.000</span>
+        </a>
+      </li>
+      <li>
+        <a href="../relogios/serpenti-spiga.html">
+          <img src="/assets/serpenti-spiga.png" alt="relogio-serpenti-tubogas">
+          <h3 class="font-1-xl c11">Spiga</h3>
+          <span class="font-2-m c8">R$ 500.000</span>
+        </a>
+      </li>
+      <li>
+        <a href="../relogios/serpenti-diamond.html">
+          <img src="/assets/serpenti-diamond.png" alt="relogio-diamond">
+          <h3 class="font-1-xl c11">Diamond</h3>
+          <span class="font-2-m c8">R$ 700.000</span>
+        </a>
+      </li>
+    </ul>
+  </article>
+
+  <article class="seguros-anuncio-bg">
+    <div class="container seguros-anuncio">
+      <div>
+        <img src="/assets/seguro.png" alt="relogio-montado">
+      </div>
+      <div class="anuncio-conteudo">
+        <h2 class="font-1-xxl w">Sua joia protegida com nosso <span class="p1">seguro</span>.</h2>
+        <p class="font-2-l c2">Inscreva-se em um dos planos do nosso seguro de joias e aproveite diversos benefícios.</p>
+        <a class="botao" href="/seguros.html">SAIBA MAIS</a>
+      </div>
+  </article>
+
+  <footer class=" footer-bg">
     <div class="footer container">
       <img src="../assets/BVLGARI.svg" alt="logo">
 
@@ -58,7 +154,7 @@
         <h3 class="font-2-l w">INFORMAÇÕES</h3>
         <nav>
           <ul class="font-2-m c5">
-            <li><a href="./relogios.html">Relógios</a></li>
+            <li><a href="../relogios.html">Relógios</a></li>
             <li><a href="../seguros.html">Seguros</a></li>
             <li><a href="../contato.html">Contato</a></li>
             <li><a href="../termos.html">Termos e condições</a></li>
