--- a/relogios.html
+++ b/relogios.html
@@ -36,7 +36,7 @@
     </div>
     <div class="relogio container">
       <div class="relogios-img">
-        <img src="./assets/relogios/tubogas.png">
+        <img src="../assets/relogios/tubogas.png">
       </div>
       <div class="relogio-conteudo">
         <h2 class="font-1-xl c11">Serpenti Tubogas - R$ 550.000</h2>
@@ -59,7 +59,7 @@
             <span>Feito na Suiça</span>
           </li>
         </ul>
-        <a href="./relogios/serpenti-tubogas.html" class="botao">MAIS SOBRE</a>
+        <a href="../relogios/serpenti-tubogas.html" class="botao">MAIS SOBRE</a>
       </div>
     </div>
 
@@ -118,7 +118,7 @@
             <span>Feito na Suiça</span>
           </li>
         </ul>
-        <a href="./relogios/serpenti-spiga.html" class="botao">MAIS SOBRE</a>
+        <a href="../relogios/serpenti-spiga.html" class="botao">MAIS SOBRE</a>
       </div>
     </div>
 
