--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </li>
       <li>
         <a href="./relogios/serpenti-classic.html">
-          <img src="/assets/serpenti-classic.png" alt="relogio-seduttori">
+          <img src="/assets/serpenti-classic.png" alt="relogio-classic">
           <h3 class="font-1-xl c11">Classic</h3>
           <span class="font-2-m c8">R$ 400.000</span>
         </a>
