--- a/relogios/serpenti-diamond.html
+++ b/relogios/serpenti-diamond.html
@@ -32,8 +32,8 @@
     </div>
     <div class="relogios container">
       <div class="relogio-imagens">
-        <img class="img1" src="/assets/relogios/classic.png">
-        <img class="img2" src="/assets/relogios/diamond.png">
+        <img class="img1" src="/assets/relogios/diamond.png">
+        <img class="img2" src="/assets/relogios/classic.png">
         <img class="img3" src="/assets/relogios/shine.png">
         <img class="img4" src="/assets/relogios/spiga.png">
         <img class="img5" src="/assets/relogios/tubogas.png">
@@ -110,10 +110,10 @@
         </a>
       </li>
       <li>
-        <a href="../relogios/serpenti-diamond.html">
-          <img src="/assets/serpenti-diamond.png" alt="relogio-diamond">
-          <h3 class="font-1-xl c11">Diamond</h3>
-          <span class="font-2-m c8">R$ 700.000</span>
+        <a href="./relogios/serpenti-classic.html">
+          <img src="/assets/serpenti-classic.png" alt="relogio-classic">
+          <h3 class="font-1-xl c11">Classic</h3>
+          <span class="font-2-m c8">R$ 400.000</span>
         </a>
       </li>
     </ul>
