--- a/relogios/serpenti-classic.html
+++ b/relogios/serpenti-classic.html
@@ -44,7 +44,7 @@
         <div class="relogio-comprar">
           <a class="botao" href="../orçamento.html">COMPRAR AGORA</a>
           <span class="c3 font-1-xs">Entrega rápida</span>
-          <span class="c3 font-1-xs">Disponível personalização</span>
+          <span class="c3 font-1-xs">Personalização</span>
         </div>
 
         <h2 class="font-1-xs w">INFORMAÇÕES</h2>
