--- a/relogios/serpenti-diamond.html
+++ b/relogios/serpenti-diamond.html
@@ -27,8 +27,8 @@
   </header>
   <main class="titulo-bg">
     <div class="titulo container">
-      <p class="up font-1-xl c5">R$ 400.000</p>
-      <h1 class="font-1-xxl w">Serpenti Classic<span class="p1">.</span></h1>
+      <p class="up font-1-xl c5">R$ 700.000</p>
+      <h1 class="font-1-xxl w">Serpenti Diamond<span class="p1">.</span></h1>
     </div>
     <div class="relogios container">
       <div class="relogio-imagens">
@@ -39,12 +39,12 @@
         <img class="img5" src="/assets/relogios/tubogas.png">
       </div>
       <div class="relogio-conteudo-about">
-        <p class="font-2-l c5">O relógio Serpenti Classic combina a sinuosidade da serpente com o design tubular moderno, refletindo curvas femininas e fluidez. Feito em ouro amarelo 18K, ele possui diamantes, rubelita na coroa e um mostrador guilhochê. A pulseira em espiral confere flexibilidade e estilo único, destacando o glamour e a sofisticação da peça.</p>
+        <p class="font-2-l c5">Combinando o espírito ousado de Serpenti, com caixa em ouro rosa 18K e pulseira de duas voltas – funde o moderno com o antigo. Com design contemporâneo, de simbolismo puramente romano, este relógio reflete a ideia de infinito, com seu padrão "ramo de trigo" abstrato esculpido na própria pulseira.</p>
 
         <div class="relogio-comprar">
           <a class="botao" href="../orçamento.html">COMPRAR AGORA</a>
           <span class="c3 font-1-xs">Entrega rápida</span>
-          <span class="c3 font-1-xs">Disponível personalização</span>
+          <span class="c3 font-1-xs">Personalização</span>
         </div>
 
         <h2 class="font-1-xs w">INFORMAÇÕES</h2>
@@ -52,12 +52,12 @@
           <li>
             <img src="/icons/relogio.svg">
             <h3 class="font-1-m w">Material</h3>
-            <p class="font-2-s c5">Feito com ouro amarelo 18k</p>
+            <p class="font-2-s c5">Feito com ouro rosa 18k</p>
           </li>
           <li>
             <img src="/icons/diamond.svg">
             <h3 class="font-1-m w">Pedra Preciosa</h3>
-            <p class="font-2-s c5">Bezel cravejado com diamantes lapidação brilhante</p>
+            <p class="font-2-s c5"> 425 diamantes redondos lapidação brilhante</p>
           </li>
           <li>
             <img src="/icons/agua.svg">
@@ -110,7 +110,7 @@
         </a>
       </li>
       <li>
-        <a href="./relogios/serpenti-classic.html">
+        <a href="../relogios/serpenti-classic.html">
           <img src="/assets/serpenti-classic.png" alt="relogio-classic">
           <h3 class="font-1-xl c11">Classic</h3>
           <span class="font-2-m c8">R$ 400.000</span>
