--- a/relogios/serpenti-spiga.html
+++ b/relogios/serpenti-spiga.html
@@ -27,19 +27,19 @@
   </header>
   <main class="titulo-bg">
     <div class="titulo container">
-      <p class="up font-1-xl c5">R$ 400.000</p>
-      <h1 class="font-1-xxl w">Serpenti Classic<span class="p1">.</span></h1>
+      <p class="up font-1-xl c5">R$ 500.000</p>
+      <h1 class="font-1-xxl w">Serpenti Spiga<span class="p1">.</span></h1>
     </div>
     <div class="relogios container">
       <div class="relogio-imagens">
-        <img class="img1" src="/assets/relogios/classic.png">
+        <img class="img1" src="/assets/relogios/spiga.png">
         <img class="img2" src="/assets/relogios/diamond.png">
         <img class="img3" src="/assets/relogios/shine.png">
-        <img class="img4" src="/assets/relogios/spiga.png">
+        <img class="img4" src="/assets/relogios/classic.png">
         <img class="img5" src="/assets/relogios/tubogas.png">
       </div>
       <div class="relogio-conteudo-about">
-        <p class="font-2-l c5">O relógio Serpenti Classic combina a sinuosidade da serpente com o design tubular moderno, refletindo curvas femininas e fluidez. Feito em ouro amarelo 18K, ele possui diamantes, rubelita na coroa e um mostrador guilhochê. A pulseira em espiral confere flexibilidade e estilo único, destacando o glamour e a sofisticação da peça.</p>
+        <p class="font-2-l c5">Com design contemporâneo, de simbolismo puramente romano, o relógio em espiral reflete a ideia de infinito, com seu padrão "ramo de trigo" abstrato entalhado na própria pulseira. Em uma homenagem ao DNA joalheiro da Bvlgari, o mostrador em malaquita cativa com suas vibrantes nuances verdes.</p>
 
         <div class="relogio-comprar">
           <a class="botao" href="../orçamento.html">COMPRAR AGORA</a>
@@ -52,12 +52,12 @@
           <li>
             <img src="/icons/relogio.svg">
             <h3 class="font-1-m w">Material</h3>
-            <p class="font-2-s c5">Feito com ouro amarelo 18k</p>
+            <p class="font-2-s c5">Feito com ouro rosa 18k</p>
           </li>
           <li>
             <img src="/icons/diamond.svg">
             <h3 class="font-1-m w">Pedra Preciosa</h3>
-            <p class="font-2-s c5">Bezel cravejado com diamantes lapidação brilhante</p>
+            <p class="font-2-s c5">Diamantes e malaquita</p>
           </li>
           <li>
             <img src="/icons/agua.svg">
@@ -103,10 +103,10 @@
         </a>
       </li>
       <li>
-        <a href="../relogios/serpenti-spiga.html">
-          <img src="/assets/serpenti-spiga.png" alt="relogio-serpenti-tubogas">
-          <h3 class="font-1-xl c11">Spiga</h3>
-          <span class="font-2-m c8">R$ 500.000</span>
+        <a href="../relogios/serpenti-classic.html">
+          <img src="/assets/serpenti-classic.png" alt="relogio-classic">
+          <h3 class="font-1-xl c11">Classic</h3>
+          <span class="font-2-m c8">R$ 400.000</span>
         </a>
       </li>
       <li>
