--- a/contato.html
+++ b/contato.html
@@ -55,7 +55,7 @@
         </div>
       </section>
 
-      <section class="contato-formulario font-1-m" aria-label="formulario">
+      <section class="contato-formulario" aria-label="formulario">
         <form action="./contato.html" class="form">
           <div>
             <label for="nome">Nome</label>
@@ -65,15 +65,15 @@
             <label for="telefone">Telefone</label>
             <input type="text" id="telefone" name="telefone" placeholder="(33) 9999-9999">
           </div>
-          <div>
+          <div class="col-2">
             <label for="email">Email</label>
             <input type="text" id="email" name="email" placeholder="contato@gmail.com">
           </div>
-          <div>
+          <div class="col-2">
             <label for="mensagem">Mensagem</label>
-            <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
+            <textarea rows="7" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
           </div>
-          <button class="botao">Enviar Mensagem</button>
+          <button class="botao col-2">Enviar Mensagem</button>
         </form>
 
       </section>
