--- a/contato.html
+++ b/contato.html
@@ -71,16 +71,48 @@
           </div>
           <div class="col-2">
             <label for="mensagem">Mensagem</label>
-            <textarea rows="7" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
+            <textarea class="my-textarea" rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
           </div>
           <button class="botao col-2">Enviar Mensagem</button>
         </form>
-
       </section>
     </div>
-
-
   </main>
+
+  <article class="lojas container">
+    <h2 class="font-1-xxl">Nossas Lojas<span class="p1">.</span></h2>
+    <div class="lojas-item">
+      <img src="/assets/rio.png" alt="mapa do rio">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">Rio De Janeiro</h3>
+        <div class="lojas-dados font-2-s c8">
+          <p>Rua ali perto, 55</p>
+          <p>Rio de Janeiro - RJ</p>
+        </div>
+        <div class="lojas-dados font-2-s c8">
+          <a href="mailto:vendas@bvlgari.com">vendas.rj@bvlgari.com</a>
+          <a href="tel:+5511974249024">(11)974349024</a>
+        </div>
+        <p class="lojas-tempo"><img src=" /icons/horario.svg">08-18h de seg à dom</p>
+      </div>
+    </div>
+    <div class="lojas-item">
+      <img src="/assets/sp.png" alt="mapa de sp">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">São Paulo</h3>
+        <div class="lojas-dados font-2-s c8">
+          <p>Rua ali perto, 55</p>
+          <p>São Paulo - SP</p>
+        </div>
+        <div class="lojas-dados font-2-s c8">
+          <a href="mailto:vendas@bvlgari.com">vendas.sp@bvlgari.com</a>
+          <a href="tel:+5511974249024">(11)974349024</a>
+        </div>
+        <p class="lojas-tempo"><img src="/icons/horario.svg">08-18h de seg à dom</p>
+      </div>
+    </div>
+  </article>
+
 
   <footer class="footer-bg">
     <div class="footer container">
