--- a/contato.html
+++ b/contato.html
@@ -28,7 +28,7 @@
   <main>
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b c5">RESPOSTAS EM ATÉ 24 HORAS</p>
+        <p class="font-2-l-b c5 up">RESPOSTAS EM ATÉ 24 HORAS</p>
         <h1 class="font-1-xxl w">Nosso contato<span class="p1">.</span></h1>
       </div>
     </div>
@@ -63,7 +63,7 @@
           </div>
           <div>
             <label for="telefone">Telefone</label>
-            <input type="text" id="telefone" name="telefone" placeholder="(33) 9999-9999">
+            <input type="text" id="telefone" name="telefone" placeholder="(33) 99999-9999">
           </div>
           <div class="col-2">
             <label for="email">Email</label>
