--- a/relogios/serpenti-classic.html
+++ b/relogios/serpenti-classic.html
@@ -42,7 +42,7 @@
         <p class="font-2-l c5">O relógio Serpenti Classic combina a sinuosidade da serpente com o design tubular moderno, refletindo curvas femininas e fluidez. Feito em ouro amarelo 18K, ele possui diamantes, rubelita na coroa e um mostrador guilhochê. A pulseira em espiral confere flexibilidade e estilo único, destacando o glamour e a sofisticação da peça.</p>
 
         <div class="relogio-comprar">
-          <a class="botao" href="../orçamento.html">COMPRAR AGORA</a>
+          <a class="botao" href="/orcamento.html">COMPRAR AGORA</a>
           <span class="c3 font-1-xs">Entrega rápida</span>
           <span class="c3 font-1-xs">Personalização</span>
         </div>
