--- a/relogios/serpenti-diamond.html
+++ b/relogios/serpenti-diamond.html
@@ -42,7 +42,7 @@
         <p class="font-2-l c5">Combinando o espírito ousado de Serpenti, com caixa em ouro rosa 18K e pulseira de duas voltas – funde o moderno com o antigo. Com design contemporâneo, de simbolismo puramente romano, este relógio reflete a ideia de infinito, com seu padrão "ramo de trigo" abstrato esculpido na própria pulseira.</p>
 
         <div class="relogio-comprar">
-          <a class="botao" href="../orçamento.html">COMPRAR AGORA</a>
+          <a class="botao" href="/orcamento.html">COMPRAR AGORA</a>
           <span class="c3 font-1-xs">Entrega rápida</span>
           <span class="c3 font-1-xs">Personalização</span>
         </div>
