--- a/relogios/serpenti-shine.html
+++ b/relogios/serpenti-shine.html
@@ -42,7 +42,7 @@
         <p class="font-2-l c5">Fundindo dois dos mais icônicos símbolos do design Bvlgari, o relógio Serpenti Shine une a sinuosidade da serpente com a contemporaneidade do tubogas. Evocando tanto as curvas sensuais de uma mulher quanto a forma fluida da serpente, o relógio é produzido com as linhas atraentes dessa técnica específica, com uma maleabilidade flexível e tubular.</p>
 
         <div class="relogio-comprar">
-          <a class="botao" href="../orçamento.html">COMPRAR AGORA</a>
+          <a class="botao" href="/orcamento.html">COMPRAR AGORA</a>
           <span class="c3 font-1-xs">Entrega rápida</span>
           <span class="c3 font-1-xs">Disponível personalização</span>
         </div>
