--- a/relogios/serpenti-spiga.html
+++ b/relogios/serpenti-spiga.html
@@ -42,7 +42,7 @@
         <p class="font-2-l c5">Com design contemporâneo, de simbolismo puramente romano, o relógio em espiral reflete a ideia de infinito, com seu padrão "ramo de trigo" abstrato entalhado na própria pulseira. Em uma homenagem ao DNA joalheiro da Bvlgari, o mostrador em malaquita cativa com suas vibrantes nuances verdes.</p>
 
         <div class="relogio-comprar">
-          <a class="botao" href="../orçamento.html">COMPRAR AGORA</a>
+          <a class="botao" href="/orcamento.html">COMPRAR AGORA</a>
           <span class="c3 font-1-xs">Entrega rápida</span>
           <span class="c3 font-1-xs">Disponível personalização</span>
         </div>
