--- a/relogios/serpenti-tubogas.html
+++ b/relogios/serpenti-tubogas.html
@@ -42,7 +42,7 @@
         <p class="font-2-l c5">Combinando duas das assinaturas estéticas mais icônicas da criatividade da Bvlgari, o relógio Serpenti Tubogas Infiniti de duas voltas em ouro rosa 18K une a sinuosidade da serpente com a alma contemporânea do Tubogas. A cabeça do animal mítico é representada por uma caixa cravejada com diamantes e um mostrador completamente cravejado com pavê de diamantes.</p>
 
         <div class="relogio-comprar">
-          <a class="botao" href="../orçamento.html">COMPRAR AGORA</a>
+          <a class="botao" href="/orcamento.html">COMPRAR AGORA</a>
           <span class="c3 font-1-xs">Entrega rápida</span>
           <span class="c3 font-1-xs">Disponível personalização</span>
         </div>
