--- a/orcamento.html
+++ b/orcamento.html
@@ -45,27 +45,77 @@
         <label class="c3" for="seguro">Seguro</label>
 
         <div class="orcamento-conteudo" id="orcamento-relogio">
-          <h2 class="font-1-xs c5">Escolha o seu Sepenti</h2>
-
+          <h2 class="font-1-xs c5">Escolha o seu Serpenti</h2>
           <input type="radio" name="produto" value="classic" id="classic">
           <label class="c3" for="classic">Serpenti Classic <span>R$400.000</span></label>
+          <div id="orcamento-detalhes" class="orcamento-detalhes">
+            <ul class="font-1-xs c8">
+              <li><img src="/icons/relogio.svg">Ouro Amarelo</li>
+              <li><img src="/icons/diamond.svg">Pedra: Diamantes</li>
+              <li><img src="/icons/agua.svg">Resistente a água</li>
+              <li><img src="/icons/made.svg">Feito na Suiça</li>
+            </ul>
+            <img src="/assets/relogios/classic.png">
+          </div>
 
           <input type="radio" name="produto" value="diamond" id="diamond">
           <label class="c3" for="diamond">Serpenti Diamond <span>R$700.000</span></label>
+          <div id="orcamento-detalhes" class="orcamento-detalhes">
+            <ul class="font-1-xs c8">
+              <li><img src="/icons/relogio.svg">Ouro Rosa</li>
+              <li><img src="/icons/diamond.svg">Pedra: Diamantes</li>
+              <li><img src="/icons/agua.svg">Resistente a água</li>
+              <li><img src="/icons/made.svg">Feito na Suiça</li>
+            </ul>
+            <img src="/assets/relogios/diamond.png">
+          </div>
 
           <input type="radio" name="produto" value="shine" id="shine">
           <label class="c3" for="shine">Serpenti Shine <span>R$100.000</span></label>
+          <div id="orcamento-detalhes" class="orcamento-detalhes">
+            <ul class="font-1-xs c8">
+              <li><img src="/icons/relogio.svg">Aço Inoxidável</li>
+              <li><img src="/icons/diamond.svg">Pedra: Diamantes</li>
+              <li><img src="/icons/agua.svg">Resistente a água</li>
+              <li><img src="/icons/made.svg">Feito na Suiça</li>
+            </ul>
+            <img src="/assets/relogios/shine.png">
+          </div>
 
           <input type="radio" name="produto" value="spiga" id="spiga">
           <label class="c3" for="spiga">Serpenti Spiga <span>R$500.000</span></label>
+          <div id="orcamento-detalhes" class="orcamento-detalhes">
+            <ul class="font-1-xs c8">
+              <li><img src="/icons/relogio.svg">Ouro Rosa</li>
+              <li><img src="/icons/diamond.svg">Diamantes e Malaquita</li>
+              <li><img src="/icons/agua.svg">Resistente a água</li>
+              <li><img src="/icons/made.svg">Feito na Suiça</li>
+            </ul>
+            <img src="/assets/relogios/spiga.png">
+          </div>
 
           <input type="radio" name="produto" value="tubogas" id="tubogas">
           <label class="c3" for="tubogas">Serpenti Tubogas <span>R$ 550.000</span></label>
+          <div id="orcamento-detalhes" class="orcamento-detalhes">
+            <ul class="lista-detalhes font-1-xs c8">
+              <li><img src="/icons/relogio.svg">Ouro Rosa</li>
+              <li><img src="/icons/diamond.svg">Diamantes</li>
+              <li><img src="/icons/agua.svg">Resistente a água</li>
+              <li><img src="/icons/made.svg">Feito na Suiça</li>
+            </ul>
+            <img src="/assets/relogios/tubogas.png">
+          </div>
 
         </div>
 
         <div class="orcamento-conteudo" id="orcamento-seguro">
           <h2 class="font-1-xs c5">Escolha o seu Seguro</h2>
+
+          <input type="radio" name="produto" value="prata" id="prata">
+          <label class="c3" for="prata">Prata <span>R$500</span></label>
+
+          <input type="radio" name="produto" value="ouro" id="ouro">
+          <label class="c3" for="ouro">Ouro <span>R$1000</span></label>
         </div>
 
       </div>
