--- a/relogios/serpenti-shine.html
+++ b/relogios/serpenti-shine.html
@@ -8,7 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../style.css">
+  <link rel="preload" href="/style.css" as="style">
+  <link rel="stylesheet" href="/style.css">
   <title>Serpenti Classic | Bvlgari</title>
 </head>
 
@@ -42,7 +43,7 @@
         <p class="font-2-l c5">Fundindo dois dos mais icônicos símbolos do design Bvlgari, o relógio Serpenti Shine une a sinuosidade da serpente com a contemporaneidade do tubogas. Evocando tanto as curvas sensuais de uma mulher quanto a forma fluida da serpente, o relógio é produzido com as linhas atraentes dessa técnica específica, com uma maleabilidade flexível e tubular.</p>
 
         <div class="relogio-comprar">
-          <a class="botao" href="/orcamento.html">COMPRAR AGORA</a>
+          <a class="botao" href="/orcamento.html?tipo=relogio&produto=shine">COMPRAR AGORA</a>
           <span class="c3 font-1-xs">Entrega rápida</span>
           <span class="c3 font-1-xs">Disponível personalização</span>
         </div>
@@ -166,4 +167,5 @@
     </div>
   </footer>
 
+  <script src="../script.js"></script>
 </body>
