--- a/seguros.html
+++ b/seguros.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
+  <link rel="preload" href="/style.css" as="style">
   <link rel="stylesheet" href="/style.css">
   <title>Seguros | BVLGARI</title>
 </head>
@@ -44,7 +45,7 @@
             <li>Suporte 08h às 18h</li>
             <li>Cobertura nacional</li>
           </ul>
-          <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+          <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
         </div>
         <div class="seguros-item">
           <h3 class="font-1-xl font-gr">OURO</h3>
@@ -57,7 +58,7 @@
             <li>Atendimento exclusivo</li>
             <li>Acesso a descontos</li>
           </ul>
-          <a class="botao" href="./orcamento.html">Inscreva-se</a>
+          <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
         </div>
       </div>
     </article>
@@ -176,4 +177,5 @@
     </div>
   </footer>
 
+  <script src="./script.js"></script>
 </body>
