--- a/relogios/serpenti-classic.html
+++ b/relogios/serpenti-classic.html
@@ -34,11 +34,11 @@
     </div>
     <div class="relogios container">
       <div class="relogio-imagens">
-        <img class="img1" src="/assets/relogios/classic.png">
-        <img class="img2" src="/assets/relogios/diamond.png">
-        <img class="img3" src="/assets/relogios/shine.png">
-        <img class="img4" src="/assets/relogios/spiga.png">
-        <img class="img5" src="/assets/relogios/tubogas.png">
+        <img class="img1" src="/assets/relogios/classic.png" alt="classic">
+        <img class="img2" src="/assets/relogios/diamond.png" alt="diamond">
+        <img class="img3" src="/assets/relogios/shine.png" alt="shine">
+        <img class="img4" src="/assets/relogios/spiga.png" alt="spiga">
+        <img class="img5" src="/assets/relogios/tubogas.png" alt="tubogas">
       </div>
       <div class="relogio-conteudo-about">
         <p class="font-2-l c5">O relógio Serpenti Classic combina a sinuosidade da serpente com o design tubular moderno, refletindo curvas femininas e fluidez. Feito em ouro amarelo 18K, ele possui diamantes, rubelita na coroa e um mostrador guilhochê. A pulseira em espiral confere flexibilidade e estilo único, destacando o glamour e a sofisticação da peça.</p>
