--- a/seguros.html
+++ b/seguros.html
@@ -113,28 +113,28 @@
 
     <dl>
       <div>
-        <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-        <dd class="font-2-s c9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dt><button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true">Qual forma de pagamento vocês aceitam?</button></dt>
+        <dd class="font-2-s c9 ativa" id="pergunta1">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
-        <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-        <dd class="font-2-s c9">Você pode entrar em contato conosco através do nosso site, onde encontrará um formulário de contato. Também estamos disponíveis por e-mail e redes sociais para responder suas dúvidas.</dd>
+        <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false">Como posso entrar em contato?</button></dt>
+        <dd class="font-2-s c9" id="pergunta2">Você pode entrar em contato conosco através do nosso site, onde encontrará um formulário de contato. Também estamos disponíveis por e-mail e redes sociais para responder suas dúvidas.</dd>
       </div>
       <div>
-        <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-        <dd class="font-2-s c9">Sim, oferecemos promoções sazonais e descontos especiais. Fique atento às nossas redes sociais e ao nosso site para mais informações sobre as ofertas atuai</dd>
+        <dt><button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
+        <dd class="font-2-s c9" id="pergunta3">Sim, oferecemos promoções sazonais e descontos especiais. Fique atento às nossas redes sociais e ao nosso site para mais informações sobre as ofertas atuai</dd>
       </div>
       <div>
-        <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
-        <dd class="font-2-s c9">Oferecemos garantia contra defeitos de fabricação em todas as nossas joias. Caso encontre algum problema, entre em contato conosco para obter informações sobre o processo de troca ou reparo.</dd>
+        <dt><button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possuo?</button></dt>
+        <dd class="font-2-s c9" id="pergunta4">Oferecemos garantia contra defeitos de fabricação em todas as nossas joias. Caso encontre algum problema, entre em contato conosco para obter informações sobre o processo de troca ou reparo.</dd>
       </div>
       <div>
-        <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
-        <dd class="font-2-s c9">Não aceitamos parcelamento no boleto. O pagamento pode ser feito à vista via boleto ou parcelado através dos cartões de crédito.</dd>
+        <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Posso parcelar no boleto?</button></dt>
+        <dd class="font-2-s c9" id="pergunta5">Não aceitamos parcelamento no boleto. O pagamento pode ser feito à vista via boleto ou parcelado através dos cartões de crédito.</dd>
       </div>
       <div>
-        <dt class="font-1-m-b"> Vocês fazem personalização de joias?</dt>
-        <dd class="font-2-s c9">Sim, oferecemos serviços de personalização para algumas das nossas joias. Você pode escolher gravar nomes, datas especiais ou escolher pedras específicas. Entre em contato conosco para mais informações sobre as opções disponíveis e prazos.</dd>
+        <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Vocês fazem personalização de joias?</button></dt>
+        <dd class="font-2-s c9" id="pergunta6">Sim, oferecemos serviços de personalização para algumas das nossas joias. Você pode escolher gravar nomes, datas especiais ou escolher pedras específicas. Entre em contato conosco para mais informações sobre as opções disponíveis e prazos.</dd>
       </div>
     </dl>
 
